--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ h2 {
     font-size: 2rem;     
 }
 
+@media(max-width: 520px) {
+    h2 {font-size: 1.5rem;}
+}
+
 /* === Utilidades/Variáveis === */
 .spacing-wrapper {
     width: 75%;
@@ -115,11 +119,11 @@ h2 {
 }
 
 .bars__burger::before {
-    transform: translateY(-8px);
+    transform: translateY(-7px);
 }
 
 .bars__burger::after {
-    transform: translateY(8px);
+    transform: translateY(7px);
 }
 
 .bars.open .bars__burger {
@@ -191,7 +195,7 @@ h2 {
     color: var(--main-fontColor);
     text-shadow: 2px 2px rgba(40, 42, 45,.75);
     cursor: pointer;
-    margin: 3.75em 1.25em 0 0;
+    margin: 2.75em 0.95em 0 0;
     transition: ease 0.3s;
     text-align: center;
 }
@@ -254,7 +258,7 @@ h2 {
 /* === Services === */
 #services {
     background-color: var(--main-bckColor);
-    padding: 0 0 7.5em 0;
+    padding: 0 0 5.5em 0;
 }
 
 .card__container {
