--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -50,7 +50,7 @@
 
     .home__icon {
         font-size: 1.75rem;
-        margin: 0 0 0 0.625em;
+        margin: 0 0.625em 0 0;
     }
 
     .whats__container {
