--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ h2 {
 .card__icon {
     color: var(--main-fontColor);
     font-size: 2.625rem; 
-    margin: 0 0 1.05em 0;   
+    margin: 0 0 0 10px;  
     text-shadow: 3px 6px rgba(27, 29, 32,.75);
 }
 
