--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,8 +44,8 @@ h2 {
 
 :root {
     --main-bckColor: #121212; 
-    --secondary-bckColor: #212121;
-    --main-fontColor: #f8f8ff;
+    --secondary-bckColor: #f5f5f5;
+    --main-fontColor: #1f1e1e;
     --secondary-fontColor : #dee3de;
     -blue: #1319bf;
 }
@@ -142,58 +142,40 @@ h2 {
 
 
 /* === Home === */
-#particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    background-image: url("");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-  }
-
 #home {
-    background-color: var(--main-bckColor);
+    background-color: #6154F0;
+    padding: 60px 0 60px 0;
+    
 }
 
 .home__container {
     width: 100%;
-    height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url(assets/images/home-img.svg);
     background-size: cover;
     background-position: center;
 }
 
 .home__title {
-    color: var(--main-fontColor);
-    font-size: 2.25rem;
-    text-align: center;
+    color: var(--secondary-fontColor);
+    font-size: 48px;
+    line-height: 1.2;
 }
 
 .home__description {
     color: var(--secondary-fontColor);
-    text-align: center;
     max-width: 80ch;
-    font-size: 1.125rem;
+    font-size: 28px;
+    text-align: center;
 }
 
-.home__description--2 {
-    color: var(--main-fontColor);
-    margin: 3.75em 0 0 0;
-    white-space: pre-line; 
-    font-style: normal;
-    font-size: 1.25rem;
-}
+
 
 .home__icon {
     font-size: 2.375rem;
     color: var(--main-fontColor);
-    text-shadow: 2px 2px rgba(40, 42, 45,.75);
     cursor: pointer;
     margin: 2.75em 0.45em 0 0;
     transition: ease 0.3s;
@@ -202,6 +184,15 @@ h2 {
 
 .home__icon:hover {
     transform: translate(0, -8px);
+}
+
+.home__imgContainer {
+    width: 45%;
+}
+
+.home__img {
+    width: 100%;
+    padding: 90px 0 0 0;
 }
 
 .whats__container {
@@ -227,7 +218,6 @@ h2 {
 
 /* === About === */
 #about {
-    background-color: var(--secondary-bckColor);
     background-attachment: fixed;
 }
 
