--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,7 +75,7 @@ h2 {
 .bars__burger {
     width: 30px;
     height: 2px;
-    background:  var(--main-fontColor);
+    background:  $main-fontColor;
     border-radius: 20px;
 }
 
@@ -85,7 +85,7 @@ h2 {
     position: absolute;
     width: 30px;
     height: 2px;
-    background:  var(--main-fontColor);
+    background:  $main-fontColor;
     border-radius: 20px;
     transition: all .3s ease-in-out;
 }
@@ -132,13 +132,13 @@ h2 {
             line-height: 1.2;       
         }
 
-}
+        &__description {
+            color: $secondary-fontColor;
+            max-width: 80ch;
+            font-size: 28px;
+            text-align: center;        
+        }
 
-.home__description {
-    color: var(--secondary-fontColor);
-    max-width: 80ch;
-    font-size: 28px;
-    text-align: center;
 }
 
 .home__imgContainer {
@@ -184,8 +184,13 @@ h2 {
     object-fit: cover;
 }
 
+.about__title {
+    font-weight: 600;
+    color: #6668F0;
+}
+
 .about__paragraph {
-    color: var(--main-fontColor);  
+    color: lighten($color: #6668F0, $amount: 5);  
     font-size: 1.125rem;
     text-align: center;
     margin: 0 0 1.875em 0;
