--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -114,7 +114,6 @@ h2 {
 
 
 /* === Home === */
-
 .home {
     background-color: #6154F0;
     padding: 120px 0 60px 0;
@@ -139,14 +138,14 @@ h2 {
             text-align: center;        
         }
 
-}
+        &__imgContainer {
+            width: 40%;          
+        }
 
-.home__imgContainer {
-    width: 40%;
-}
+        &__img {
+            width: 100%;           
+        }
 
-.home__img {
-    width: 100%;
 }
 
 .whats__container {
@@ -171,51 +170,42 @@ h2 {
 }
 
 /* === About === */
-#about {
-    background-attachment: fixed;
-}
+.about {
 
-.about__img {
-    border-radius: 100px;
-    width: 150px;
-    height: 150px;
-    display: block;
-    margin: 0 auto 2.5em auto;
-    object-fit: cover;
-}
+    &__img {
+        border-radius: 100px;
+        width: 150px;
+        height: 150px;
+        display: block;
+        margin: 0 auto 2.5em auto;
+        object-fit: cover;        
+    }
 
-.about__title {
-    font-weight: 600;
-    color: lighten($color: #000000, $amount: 20);
-}
+    &__title {
+        font-weight: 600;
+        color: lighten($color: #000000, $amount: 20);           
+    }
 
-.about__paragraph {
-    color: lighten($color: #000000, $amount: 25);
-    font-size: 18px;
-    text-align: justify;
-    margin: 0 0 1.875em 0;
-}
+    &__paragraph {
+        color: lighten($color: #000000, $amount: 25);
+        font-size: 18px;
+        text-align: justify;
+        margin: 0 0 1.875em 0;        
+    }
 
-.about__hr {
-    margin: 2% 0 5em 0;
-    width: 60%;
-    color: var(--main-fontColor);  
-    height: 1px;
-    background-color: var(--main-fontColor);
+    &__hr {
+        margin: 2% 0 5em 0;
+        width: 60%;
+        color: var(--main-fontColor);  
+        height: 1px;
+        background-color: var(--main-fontColor);        
+    }
 }
 
 /* === Services === */
 #services {
     background-color: var(--main-bckColor);
     padding: 0 0 5.5em 0;
-}
-
-.card__container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 2vw;
-    justify-content: center;
-    align-items: center;
 }
 
 .card {
@@ -227,161 +217,171 @@ h2 {
     flex-direction: column;
     padding: 2.5em 1.25em;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);   
-}
 
-.card--middle {
-    margin: 0 0 3.75em 0;
-}
+    &__container {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-gap: 2vw;
+        justify-content: center;
+        align-items: center;        
+    }
 
-.card__icon {
-    color: var(--main-fontColor);
-    font-size: 2.625rem; 
-    margin: 0 0 0 10px;  
-    text-shadow: 3px 6px rgba(27, 29, 32,.75);
-}
+    &__icon {
+        color: var(--main-fontColor);
+        font-size: 2.625rem; 
+        margin: 0 0 0 10px;  
+        text-shadow: 3px 6px rgba(27, 29, 32,.75);        
+    }
 
-.card__icon--mobile {
-    font-size: 1.75rem;
-}
+    &__title {
+        font-weight: normal;
+        font-size: 1.75rem;
+        color: var(--main-fontColor);
+        margin: 0 0 1.25em 0;        
+    }
 
-.card__title {
-    font-weight: normal;
-    font-size: 1.75rem;
-    color: var(--main-fontColor);
-    margin: 0 0 1.25em 0;
-}
+    &__paragraph {
+        color: var(--secondary-fontColor);
+        line-height: 1.8;        
+    }
 
-.card__paragraph {
-    color: var(--secondary-fontColor);
-    line-height: 1.8;
+    .card--middle {
+        margin: 0 0 3.75em 0;
+    }
+
+    .card__icon--mobile {
+        font-size: 1.75rem;
+    }
 }
 
 /* === Portfolio === */
-#portfolio {
-    background-color: var(--secondary-bckColor);
+.portfolio {
+    background-color: var(--secondary-bckColor);    
+
+    &__subtitle {
+        text-align: center;
+        color: var(--main-fontColor);    
+        margin: 0 0 2.5em 0;
+        font-size: 1.375rem;
+        font-weight: normal;       
+    }
+
+    &__subtitle::after {
+        content: '';
+        display: block;
+        margin: 0 auto;
+        width: 15%;
+        height: 1px;
+        background-color: var(--secondary-fontColor);
+        color: var(--secondary-fontColor);       
+    }
+
+    &__images {
+        display: grid;
+        grid-gap: 2vw;
+        grid-template-columns: repeat(3, 1fr);
+        justify-content: center;
+        align-items: center;
+        margin: 0 0 2.5em 0;        
+    }
 }
 
-.portfolio__subtitle {
-    text-align: center;
-    color: var(--main-fontColor);    
-    margin: 0 0 2.5em 0;
-    font-size: 1.375rem;
-    font-weight: normal;
-}
+.site {
 
-.portfolio__subtitle::after {
-    content: '';
-    display: block;
-    margin: 0 auto;
-    width: 15%;
-    height: 1px;
-    background-color: var(--secondary-fontColor);
-    color: var(--secondary-fontColor);
-} 
+    &__container {
+        position: relative;
+        width: 100%;       
+    }
 
-.portfolio__images {
-    display: grid;
-    grid-gap: 2vw;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    align-items: center;
-    margin: 0 0 2.5em 0;
-}
+    &__container:hover .site__img {
+        opacity: 0.3;        
+    }
 
-.site__imgContainer {
-    position: relative;
-    width: 100%;
-}
+    &__container:hover .site__middle {
+        opacity: 1;
+    }
 
-.site__img {
-    object-fit: cover;
-    width: 420px;
-    max-width: 100%;
-    max-height: 100%;
-    margin-bottom: 2%;
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);   
-    transition: .5s ease;
-    backface-visibility: hidden;
-    opacity: 1;
-}
+    &__img {
+        object-fit: cover;
+        width: 420px;
+        max-width: 100%;
+        max-height: 100%;
+        margin-bottom: 2%;
+        box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);   
+        transition: .5s ease;
+        backface-visibility: hidden;
+        opacity: 1;        
+    }
 
-.site__imgMiddle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-}
+    &__middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;        
+    }
 
-.site__imgContainer:hover .site__img {
-    opacity: 0.3;
-  }
-  
-.site__imgContainer:hover .site__imgMiddle {
-    opacity: 1;
-}
-  
-.site__imgText {
-    background-color: var(--main-bckColor);
-    color: white;
-    font-size: 1rem;
-    padding: 12px 24px;
-    border-radius: 50px;
-}
+    &__text {
+        background-color: var(--main-bckColor);
+        color: white;
+        font-size: 1rem;
+        padding: 12px 24px;
+        border-radius: 50px;
+    }  
+    
+    &_description {
+        display: flex;
+        flex-direction: column;
+        margin: 0 0 2.5em 0;        
+    }
 
-.site__description {
-    display: flex;
-    flex-direction: column;
-    margin: 0 0 2.5em 0;
-}
+    &__tags {
+        display: flex;        
+    }
 
-.site__tags {
-    display: flex;
-}
+    &__tag {
+        color: var(--main-fontColor);
+        padding: 3px 10px;
+        background-color: var(--main-bckColor);
+        margin: 0 0.313em 0.625em 0;
+        border-radius: 5px;
+        font-size: 0.75rem;
+        letter-spacing: 0.09em;        
+    }
 
-.site__tag {
-    color: var(--main-fontColor);
-    padding: 3px 10px;
-    background-color: var(--main-bckColor);
-    margin: 0 0.313em 0.625em 0;
-    border-radius: 5px;
-    font-size: 0.75rem;
-    letter-spacing: 0.09em;
-}
-
-.site__title {
-    font-size: 1.25rem;
-    color: var(--secondary-fontColor);
+    &__title {
+        font-size: 1.25rem;
+        color: var(--secondary-fontColor);
+    }
 }
 
 /* === Contact === */
-#contact {
-    background-color: var(--main-bckColor);
-}
+.contact {
+    background-color: var(--main-bckColor);  
+    
+    &__container {
+        padding: 3.75em 0;         
+    }
 
-.contact__container {
-    padding: 3.75em 0;    
-}
+    &__icon {
+        text-align: center;        
+    }
 
-.contact__icon {
-    text-align: center;
-}
+    &__subtitle {
+        text-align: center;
+        color: var(--secondary-fontColor);
+        font-size: 1rem;
+        margin: 0 0 0.938em 0;       
+    }
 
-.contact__subtitle {
-    text-align: center;
-    color: var(--secondary-fontColor);
-    font-size: 1rem;
-    margin: 0 0 0.938em 0;
+    &__subtitle--1 {
+        margin: 0 0 2.5em 0;
+        font-size: 1.125rem;       
+    }
 }
-
-.contact__subtitle--1 {
-    margin: 0 0 2.5em 0;
-    font-size: 1.125rem;
-}
-
 
 /* === Copy === */
 .copy__paragraph {
