--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -115,8 +115,8 @@ h2 {
 
 /* === Home === */
 .home {
-    background-color: #6154F0;
-    padding: 120px 0 70px 0;
+    background-color: rgb(102, 104, 240);
+    padding: 120px 0 60px 0;
 
         &__container {
             width: 100%;
