--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -34,6 +34,8 @@
 @media(max-width: 520px) {
     .home {
 
+        padding: 140px 0 80px 0;
+
         &__text {
             margin-bottom: 40px;    
         }
@@ -43,15 +45,25 @@
         }
 
         &__title {
-            font-size: 26px;    
+            font-size: 26px;   
+            margin: 0 0 10px 0;  
         }
 
         &__description {
-            font-size: 16px;     
+            font-size: 16px;  
+            margin: 0 0 20px 0;   
+        }
+
+        &__btn {
+            margin: 0 0 20px 0;
+            display: block;
+            width: 50%;
+            text-align: center;
+            padding: 10px 20px;
         }
 
         &__imgContainer {
-            width: 80%;    
+            width: 90%;    
         }
     }
 
