--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,7 +75,7 @@ h2 {
 .bars__burger {
     width: 30px;
     height: 2px;
-    background:  $main-fontColor;
+    background-color: darken($color: #6668F0, $amount: 40);
     border-radius: 20px;
 }
 
@@ -85,7 +85,7 @@ h2 {
     position: absolute;
     width: 30px;
     height: 2px;
-    background:  $main-fontColor;
+    background-color: darken($color: #6668F0, $amount: 40);
     border-radius: 20px;
     transition: all .3s ease-in-out;
 }
