--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -46,20 +46,20 @@
 
         &__title {
             font-size: 28px;   
-            margin: 0 0 10px 0;  
+            margin: 0 0 15px 0;  
         }
 
         &__description {
-            font-size: 18px;  
+            font-size: 20px;  
             margin: 0 0 30px 0;   
         }
 
         &__btn {
-            margin: 0 0 10px 0;
+            margin: 0 0 15px 0;
             display: block;
-            width: 45%;
+            width: 50%;
             text-align: center;
-            padding: 10px 20px;
+            padding: 8px 0;
         }
 
         &__imgContainer {
