--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -52,6 +52,7 @@
         &__description {
             font-size: 20px;  
             margin: 0 0 30px 0;   
+            line-height: 1.4;
         }
 
         &__btn {
