--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -127,15 +127,16 @@ h2 {
 
         &__title {
             color: darken($color: #ffffff, $amount: 5);
-            font-size: 48px;
+            font-size: 46px;
+            font-weight: normal;
             line-height: 1.2;     
-            margin: 0 0 20px 0;  
+            margin: 0 0 5px 0;  
         }
 
         &__description {
             color: darken($color: #ffffff, $amount: 5);
-            font-size: 24px;     
-            margin: 0 0 60px 0;
+            font-size: 22px;     
+            margin: 0 0 80px 0;
         }
 
         &__btn {
@@ -151,6 +152,7 @@ h2 {
         &__btn--2 {
             background-color: white;
             color: #6668F0;
+            padding: 15px 45px;
         }
 
         &__imgContainer {
