--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -10,23 +10,32 @@
 @media(max-width: 800px) {
     .home {
 
+        &__container {
+            flex-direction: column;
+        }
+
         &__title {
-            font-size: 1.75rem;
-            max-width: 40ch;           
+            font-size: 28px;
+            text-align: center;         
         }
 
         &__description {
-            font-size: 1rem;
-            max-width: 50ch;    
+            font-size: 20px;   
+            text-align: center;
+            margin: 0 0 30px 0;  
+            line-height: 1.4;
         }
 
-        &__description--2 {
-            margin: 2.5em 0 2.5em 0;    
+        &__btn {
+            display: block;
+            width: 50%;
+            text-align: center;
+            margin: 0 auto 60px auto;
+            padding: 8px 0;
         }
 
-        &__icon {
-            font-size: 2rem;
-            margin: 0 0 0 0.525em;    
+        &__btn--2 {
+            display: none;
         }
     }
 }
@@ -34,33 +43,24 @@
 @media(max-width: 520px) {
     .home {
 
-        padding: 100px 0 80px 0;
+        padding: 120px 0 80px 0;
 
         &__text {
-            margin-bottom: 40px;    
-        }
-
-        &__container {
-            flex-direction: column;    
+            margin-bottom: 40px;  
+            text-align: center;  
         }
 
         &__title {
-            font-size: 28px;   
+            font-size: 26px;   
             margin: 0 0 15px 0;  
         }
 
         &__description {
-            font-size: 20px;  
-            margin: 0 0 30px 0;   
-            line-height: 1.4;
+            font-size: 18px;  
         }
 
         &__btn {
-            margin: 0 0 15px 0;
-            display: block;
-            width: 50%;
-            text-align: center;
-            padding: 8px 0;
+            margin: 0 auto 20px auto;
         }
 
         &__imgContainer {
