--- a/assets/css/slick-theme.css
+++ b/assets/css/slick-theme.css
@@ -130,7 +130,7 @@
 
     width: 100%;
     padding: 0;
-    margin: 0;
+    margin: 0 0 40px 0;
 
     list-style: none;
 
@@ -168,6 +168,8 @@
     border: 0;
     outline: none;
     background: transparent;
+
+    margin: 0 0 40px 0;
 }
 .slick-dots li button:hover,
 .slick-dots li button:focus
@@ -182,13 +184,14 @@
 .slick-dots li button:before
 {
     font-family: 'slick';
-    font-size: 48px;
+    font-size: 30px;
     line-height: 20px;
     text-align: center;
     position: absolute;
     top: 0;
     left: 0;
 
+    margin: 0 0 40px 0;
     width: 60px;
     height: 60px;
 
