--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,14 +353,40 @@ h2 {
 
 .portfolio__images {
     margin: 0 0 40px 0;
+    width: 100%;
+    max-width: 100%; 
+    margin: 0 auto;
 }
 
-.portfolio__img {
+.img__container {
     width: 100%;
-    height: 600px;
-    margin: 0 30px 0 30px;
+    height: 400px;
+    object-fit: cover;  
+    display: block;
+    margin: 0 30px 80px 30px;
+}
+
+.img {
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);
+    object-fit: cover;
+    width: 100%;
+    margin: 0 0 15px 0;
+}
+
+.img__title {
+    text-align: center;
+    color: var(--main-fontColor);
+    font-size: 24px;
+    font-weight: normal;
+}
+
+.img__description {
+    text-align: center;
+    font-style: italic;
+    max-width: 40rem;
+    margin: 0 auto;
+    color: var(--secondary-fontColor);
 }
 
 /* === Contact === */
@@ -374,6 +400,7 @@ h2 {
 
 .contact__icon {
     text-align: center;
+    color: #6154F0;
 }
 
 .contact__subtitle {
