--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,6 +389,10 @@ h2 {
     color: var(--secondary-fontColor);
 }
 
+.img__link {
+    color: #AA88FF;
+}
+
 /* === Contact === */
 #contact {
     background-color: var(--main-bckColor);
