--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -46,7 +46,7 @@
         }
 
         &__paragraph {
-            font-size: 16px;
+            font-size: 14px;
             letter-spacing: -.01rem;              
             font-weight: 300;
             max-width: 20rem;
@@ -139,29 +139,31 @@
 }
 
 @media(max-width: 520px) {
-    .portfolio__subtitle {
-        font-size: 1.375rem;
-    }
+    .portfolio {
 
-    .portfolio__images {
-        
-    }
-    
-    .img__container {
-        margin: 0;
-        width: 100%;
-        max-width: 90%;
-    }
+        &__subtitle {
+            font-size: 1.375rem;    
+        }
 
-    .img__description {
-        max-width: 100%;
-        font-size: 14px;
-    }
+        .img {
+            width: 85%;
+            
+            &__container {
+                margin: 0 8px 60px 8px; 
+                width: 100%;
+                max-width: 90%;
+                padding: 15px 0px;
+                height: 400px;    
+                border-radius: 6px;
+            }
 
-    .img {
-        width: 100%;
-    }
+            &__description {
+                max-width: 90%;
+                font-size: 14px;    
+            }
+        }
 
+    }
 }
 
 /* === Contact === */
