--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -367,11 +367,11 @@ h2 {
         margin: 0 auto 15px auto;  
 
         &__container {
-            width: 80%;
-            margin: 0 20px 60px 20px;   
+            width: 30%;
+            margin: 0 25px 60px 25px;   
             background-color: #131417;
             box-shadow: 0 4px 3px 0 rgba(0,0,0,0.4);
-            padding: 20px 40px;
+            padding: 20px 30px;
             border-radius: 6px;
             height: 400px;
         }
@@ -390,12 +390,13 @@ h2 {
             text-align: center;
             color: var(--main-fontColor);
             font-size: 24px;
-            font-weight: normal;    
+            font-weight: normal;
+            margin: 0 0 15px 0;   
         }
 
         &__description {
             text-align: center;
-            max-width: 40rem;
+            max-width: 30rem;
             margin: 0 auto 120px auto;
             color: var(--secondary-fontColor);    
 
@@ -429,7 +430,8 @@ h2 {
     background-color: var(--main-bckColor);    
 
     &__container {
-        padding: 3.75em 0;    
+        padding: 3.75em 0; 
+        text-align: center;   
     }
 
     &__icon {
@@ -440,13 +442,25 @@ h2 {
     &__subtitle {
         text-align: center;
         color: var(--secondary-fontColor);
-        font-size: 1rem;
-        margin: 0 0 0.938em 0;    
+        font-size: 18px;
+        text-decoration: underline;
+        display: inline-block;
+        margin: 0 0 20px 0;
+        transition: ease 0.2s;
+    }
+
+    &__subtitle:hover {
+        color: #6154F0;
     }
 
     &__subtitle--1 {
         margin: 0 0 2.5em 0;
         font-size: 1.125rem;    
+        text-decoration: none;
+    }
+
+    &__subtitle--1:hover {
+        color: var(--secondary-fontColor);
     }
 }
 
